# ci_analyst

./: .env.example  .env.readme  .gitignore  AGENTS.md  CLAUDE.md  README.md  eval_plan.md  eval_plan_v2.md  eval_plan_v2_1.md  eval_prompts.md  eval_prompts_v2.md  eval_prompts_v2_1.md  example_queries.md  package-lock.json  package.json  pipeline_update_plan.md  requirements-eval.txt  semantic_guardrails.json  semantic_model.yaml
apps/orchestrator/: .env  .env.example  .env.mock.example  .env.prod  .env.prod-sandbox  .env.readme  .env.sandbox  .env.sandbox.example  README.md  package.json  pyproject.toml  requirements.txt
apps/orchestrator/app/: __init__.py  config.py  main.py  models.py  observability.py  tracing.py
apps/orchestrator/tests/: orchestrator_test_support.py  test_anthropic_bedrock.py  test_anthropic_llm.py  test_azure_openai.py  test_azure_schema.py  test_data_summarizer_stage.py  test_inline_checks.py  test_inline_checks_v2_1.py  test_llm_schemas.py  test_orchestrator.py  test_orchestrator_memory.py  test_orchestrator_planner_guardrails.py  test_orchestrator_stream.py  test_orchestrator_sync.py  test_orchestrator_trace.py  test_planner_stage.py  test_planner_stage_blocking.py  test_planner_stage_presentation.py  test_planner_stage_tasks.py  test_presentation_contracts.py  test_prompt_templates.py  test_provider_factory.py  test_real_dependencies.py  test_routes.py  test_sandbox_cortex_provider.py  (+18 more)
evaluation/: __init__.py  annotation_guide.md  annotation_guide_v2_1.md  async_production_eval.py  async_production_eval_v2_1.py  code_evaluators.py  code_evaluators_v2_1.py  common.py  common_v2_1.py  eval_the_evals.py  eval_the_evals_v2_1.py  golden_dataset.py  golden_dataset_v2_1.py  golden_examples.yaml  llm_evaluators.py  llm_evaluators_v2_1.py  playwright_initial_six_feedback_2026-03-05.md  playwright_initial_six_feedback_2026-03-06.md  playwright_initial_six_feedback_2026-03-06_followup.md  pyproject.toml  quality_gate.py  quality_gate_v2_1.py  run_experiment.py  run_experiment_v2_1.py  test_llm_evaluators.py  test_llm_evaluators_v2_1.py  upload_golden_dataset.py  upload_golden_dataset_v2_1.py
evaluation/flagged/: review_20260303.csv
(+145 files in other folders)
